[package]
name = "stockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.55.0", features = [
    "tokio", "gossipsub", "mdns", "noise",
    "macros", "tcp", "yamux", "quic"
] }
ops = "0.6.0"
tokio = { version = "1.38", features = ["full"] }
futures = "0.3.30"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }